testdata/invalid/invalid_const_unassignable_string.bop
const string j = 56;